--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+asgiref==3.5.2
+backports.zoneinfo==0.2.1
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+cryptography==37.0.4
+defusedxml==0.7.1
 Django==4.0.4
 django-allauth==0.50.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.2.4
-whitenoise==6.0.0
+gunicorn==20.1.0
+idna==3.3
+oauthlib==3.2.0
 psycopg2-binary==2.9.3
+pycparser==2.21
+PyJWT==2.4.0
+python3-openid==3.2.0
+requests==2.28.1
+requests-oauthlib==1.3.1
+sqlparse==0.4.2
+urllib3==1.26.11
+whitenoise==6.0.0
