--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Django==4.0.4
 django-allauth==0.50.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.2.4
+django-environ==0.9.0
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
