--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,19 @@ django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.5.0
 django-environ==0.9.0
+factory-boy==3.2.1
+Faker==14.1.0
 gunicorn==20.1.0
 idna==3.3
 oauthlib==3.2.0
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.4.0
+python-dateutil==2.8.2
 python3-openid==3.2.0
 requests==2.28.1
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.2
 urllib3==1.26.11
 whitenoise==6.2.0
