--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -23,6 +23,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+      - name: Collect Static
+        run: |
+          python manage.py collectstatic --no-input
       - name: Run Tests
         run: |
           python manage.py test --keepdb
