--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -12,7 +12,10 @@ jobs:
       postgres:
         image: postgres
         env:
+          POSTGRES_DB: teambio
           POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -22,7 +25,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python-version: [ 3.9 ]
+        python-version: [ 3.9, 3.10 ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -38,7 +41,7 @@ jobs:
           python manage.py collectstatic --no-input
       - name: Run Tests
         env:
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432/postgres
+          DATABASE_URL: postgres://postgres:postgres@localhost:5432/teambio
         run: |
           python manage.py test --no-input
   lint:
