--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python-version: [ '3.9', '3.10' ]
+        python-version: [ '3.9']
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
