--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -36,6 +36,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install coverage
       - name: Collect Static
         run: |
           python manage.py collectstatic --no-input
@@ -43,7 +44,9 @@ jobs:
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/teambio
         run: |
-          python manage.py test --no-input
+          coverage run --source='.' manage.py test --no-input
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
   lint:
     runs-on: ubuntu-latest
     steps:
