--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
 certifi==2022.9.14
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -12,6 +11,7 @@ django-debug-toolbar==3.6.0
 django-environ==0.9.0
 factory-boy==3.2.1
 Faker==14.2.0
+filelock==3.8.0
 gunicorn==20.1.0
 idna==3.4
 oauthlib==3.2.1
@@ -21,8 +21,11 @@ PyJWT==2.4.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 requests==2.28.1
+requests-file==1.5.1
 requests-oauthlib==1.3.1
 six==1.16.0
 sqlparse==0.4.2
+tldextract==3.3.1
+types-cryptography==3.3.23
 urllib3==1.26.12
 whitenoise==6.2.0
