--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.2
-backports.zoneinfo==0.2.1
+boto3==1.24.85
+botocore==1.27.85
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -10,19 +11,29 @@ django-allauth==0.51.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==3.7.0
 django-environ==0.9.0
+django-ses==3.2.0
+django-storages==1.13.1
 factory-boy==3.2.1
 Faker==15.0.0
+filelock==3.8.0
 gunicorn==20.1.0
 idna==3.4
+jmespath==1.0.1
 oauthlib==3.2.1
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.5.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
+pytz==2022.4
 requests==2.28.1
+requests-file==1.5.1
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
+sentry-sdk==1.9.10
 six==1.16.0
 sqlparse==0.4.3
+tldextract==3.3.1
+types-cryptography==3.3.23
 urllib3==1.26.12
 whitenoise==6.2.0
