--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ gunicorn==20.1.0
 idna==3.4
 jmespath==1.0.1
 oauthlib==3.2.1
+Pillow==9.2.0
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyJWT==2.5.0
