--- a/codecov.yml
+++ b/codecov.yml
@@ -1,1 +1,11 @@
-comment: true
+coverage:
+  status:
+    project:
+      default:
+        informational: true
+    patch:
+      default:
+        informational: true
+
+comment:
+  require_changes: true
