--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ requests==2.28.1
 requests-file==1.5.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
+sentry-sdk==1.9.10
 six==1.16.0
 sqlparse==0.4.3
 tldextract==3.4.0
