--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ filelock==3.8.0
 gunicorn==20.1.0
 idna==3.4
 jmespath==1.0.1
+Pillow==9.2.0
 oauthlib==3.2.2
 psycopg2-binary==2.9.4
 pycparser==2.21
