--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.5.2
-boto3==1.24.91
-botocore==1.27.95
+boto3
+botocore
 certifi==2022.9.24
 cffi==1.15.1
 charset-normalizer==2.1.1
@@ -31,7 +31,7 @@ requests==2.28.1
 requests-file==1.5.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
-sentry-sdk==1.10.0
+sentry-sdk
 six==1.16.0
 sqlparse==0.4.3
 tldextract==3.4.0
