--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ boto3
 botocore
 certifi==2022.9.24
 cffi==1.15.1
+charset-normalizer==2.1.1
 cryptography==38.0.3
 defusedxml==0.7.1
 Django==4.1.3
@@ -18,8 +19,8 @@ filelock==3.8.0
 gunicorn==20.1.0
 idna==3.4
 jmespath==1.0.1
-Pillow==9.3.0
 oauthlib==3.2.2
+Pillow==9.3.0
 psycopg2-binary==2.9.5
 pycparser==2.21
 PyJWT==2.6.0
@@ -30,7 +31,7 @@ requests==2.28.1
 requests-file==1.5.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
-sentry-sdk
+sentry-sdk==1.10.1
 six==1.16.0
 sqlparse==0.4.3
 tldextract==3.4.0
