--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,16 @@ botocore
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
+crispy-tailwind==0.5.0
 cryptography==39.0.0
 defusedxml==0.7.1
 Django==4.1.5
 django-allauth==0.52.0
-django-debug-toolbar==3.8.1
+django-crispy-forms==1.14.0
 django-environ==0.9.0
 django-ses==3.3.0
 django-storages==1.13.2
+django_debug_toolbar==3.8.1
 factory-boy==3.2.1
 Faker==16.4.0
 filelock==3.9.0
@@ -30,7 +32,7 @@ requests==2.28.2
 requests-file==1.5.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
-sentry-sdk==1.13.0
+sentry-sdk
 six==1.16.0
 sqlparse==0.4.3
 tldextract==3.4.0
