--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -10,6 +10,7 @@ env:
   STRIPE_PUBLISHABLE_KEY: ${{secrets.STRIPE_PUBLISHABLE_KEY}}
   STRIPE_SECRET_KEY: ${{secrets.STRIPE_SECRET_KEY}}
   STRIPE_PRICE_ID: ${{secrets.STRIPE_PRICE_ID}}
+  STRIPE_ENDPOINT_SECRET: ${{secrets.STRIPE_ENDPOINT_SECRET}}
 
 jobs:
   test:
