Pricing and Stripe Integration (#96)
* Added pricing page

* Added billing app

* Added stripe to requirements.txt

* Setup environment variables

* Updated env variable example

* Added login required

* Added a bunch of endpoints and templates for payments

* More env variables

* Added basic stripe integration

* Fixed error

* Fixed code quality issue and fixed lint issue

* Added ability to detect if in trial

* Some new fields

* Added trial days to store how many days they are entitled to

* Black fixes

* Renamed some variables

* Added some error handling to payment requests

* Removed unneeded files

* Added billing inactive page

* Added functions to count num users and process invoicing

* Made pricing dynamic

* Fixed test

* Fixed a test

* Updated success.html

* Added a flag for if a company is in testing mode

* Changed logic

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ DEBUG=True
 SECRET_KEY=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_PRICE_ID=
+STRIPE_ENDPOINT_SECRET=
