--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,3 +10,10 @@ repos:
       - id: isort
         args: [ "--profile", "black", "--filter-files", "--skip", "migrations" ]
         name: isort (python)
+  -   repo: https://github.com/PyCQA/flake8
+    rev: 3.9.2
+    hooks:
+    -   id: flake8
+        args:
+          - "--max-line-length=250"
+          - "--ignore=W605,W291,W503,E203"
