--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -62,7 +62,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Lint with pre-commit
-        run: pre-commit run -a
+        run: |
+          pre-commit install
+          pre-commit run -a
   deploy:
     runs-on: ubuntu-latest
     needs: [test, lint]
