--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -11,6 +11,7 @@ env:
   STRIPE_SECRET_KEY: ${{secrets.STRIPE_SECRET_KEY}}
   STRIPE_PRICE_ID: ${{secrets.STRIPE_PRICE_ID}}
   STRIPE_ENDPOINT_SECRET: ${{secrets.STRIPE_ENDPOINT_SECRET}}
+  GOOGLE_MAPS_API_KEY: ${{secrets.GOOGLE_MAPS_API_KEY}}
 
 jobs:
   test:
