--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -12,6 +12,7 @@ env:
   STRIPE_PRICE_ID: ${{secrets.STRIPE_PRICE_ID}}
   STRIPE_ENDPOINT_SECRET: ${{secrets.STRIPE_ENDPOINT_SECRET}}
   GOOGLE_MAPS_API_KEY: ${{secrets.GOOGLE_MAPS_API_KEY}}
+  MAPBOX_API_KEY: ${{secrets.MAPBOX_API_KEY}}
 
 jobs:
   test:
