--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -5,6 +5,7 @@ on: [ push ]
 env:
   SECRET_KEY: ${{secrets.SECRET_KEY}}
   DATABASE_URL: ${{secrets.DATABASE_URL}}
+  REDIS_URL: ${{secrets.REDIS_URL}}
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
   AWS_SECRET_ACCESS_KEY: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   STRIPE_PUBLISHABLE_KEY: ${{secrets.STRIPE_PUBLISHABLE_KEY}}
