--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 PYTHON_VERSION=3.9.9
 DATABASE_URL=
+REDIS_URL=
 DEBUG=True
 SECRET_KEY=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+GOOGLE_MAPS_API_KEY=
+MAPBOX_API_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_PRICE_ID=
