--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -37,6 +37,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+          cache: 'pip'
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
@@ -60,6 +61,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+          cache: 'pip'
       - name: Install pre-commit
         run: pip install pre-commit
       - name: Lint with pre-commit
