--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,3 +15,7 @@ repos:
     hooks:
       - id: flake8
         args: [ "--max-line-length=400", "--ignore=W605,W291,W503,E203" ]
+  - repo: https://github.com/Riverside-Healthcare/djLint
+    rev: v1.19.16
+    hooks:
+      - id: djlint-django
