--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -18,6 +18,13 @@ env:
 jobs:
   test:
     services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
       postgres:
         image: postgres
         env:
@@ -49,6 +56,7 @@ jobs:
       - name: Run Tests
         env:
           DATABASE_URL: postgres://postgres:postgres@localhost:5432/teambio
+          REDIS_URL: rediss://redis:6379
         run: |
           coverage run --source='.' manage.py test --no-input
       - name: Upload coverage reports to Codecov
