--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -3,7 +3,7 @@ name: Test and Deploy
 on: [ push, pull_request ]
 
 env:
-  SECRET_KEY: ${{secrets.SECRET_KEY}}
+  SECRET_KEY: "FAKE_SECRET_KEY"
   DATABASE_URL: ${{secrets.DATABASE_URL}}
   REDIS_URL: ${{secrets.REDIS_URL}}
   AWS_ACCESS_KEY_ID: ${{secrets.AWS_ACCESS_KEY_ID}}
