--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+async-timeout==4.0.2
 boto3
 botocore
 certifi==2022.12.7
@@ -11,12 +12,13 @@ defusedxml==0.7.1
 distlib==0.3.6
 Django==4.2
 django-allauth==0.54.0
+django-colorfield==0.8.0
 django-crispy-forms==1.14.0
+django-debug-toolbar
 django-environ==0.10.0
 django-redis==5.2.0
 django-ses==3.3.0
 django-storages==1.13.2
-django_debug_toolbar==4.0.0
 factory-boy==3.2.1
 Faker==18.4.0
 filelock==3.11.0
