--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.6.0
 async-timeout==4.0.2
+beautifulsoup4==4.12.2
 boto3
 botocore
 certifi==2023.5.7
@@ -30,6 +31,7 @@ jmespath==1.0.1
 nodeenv==1.8.0
 oauthlib==3.2.2
 Pillow==9.5.0
+pillow-heif==0.11.1
 platformdirs==3.5.1
 pre-commit==3.3.1
 psycopg2-binary==2.9.6
@@ -46,6 +48,7 @@ requests-oauthlib==1.3.1
 s3transfer==0.6.1
 sentry-sdk
 six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
 stripe==5.4.0
 tldextract==3.4.1
