Added placeholder key for OpenAI API key

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 GOOGLE_MAPS_API_KEY=
 MAPBOX_API_KEY=
+OPENAI_KEY=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_PRICE_ID=
