--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-asgiref==3.7.2
+aiohttp==3.8.4
+aiosignal==1.3.1
+asgiref
 async-timeout==4.0.2
+attrs==23.1.0
 beautifulsoup4==4.12.2
 boto3
 botocore
@@ -23,13 +26,16 @@ django-storages==1.13.2
 factory-boy==3.2.1
 Faker==18.10.1
 filelock==3.12.2
+frozenlist==1.3.3
 googlemaps==4.10.0
 gunicorn==20.1.0
 identify==2.5.24
 idna==3.4
 jmespath==1.0.1
+multidict==6.0.4
 nodeenv==1.8.0
 oauthlib==3.2.2
+openai==0.27.8
 Pillow==9.5.0
 pillow-heif==0.11.1
 platformdirs==3.5.3
@@ -42,7 +48,7 @@ python3-openid==3.2.0
 pytz==2023.3
 PyYAML==6.0
 redis==4.5.5
-requests==2.31.0
+requests==2.30.0
 requests-file==1.5.1
 requests-oauthlib==1.3.1
 s3transfer==0.6.1
@@ -51,8 +57,10 @@ six==1.16.0
 soupsieve==2.4.1
 sqlparse==0.4.4
 stripe==5.4.0
-tldextract==3.4.4
+tldextract==3.4.3
+tqdm==4.65.0
 types-cryptography==3.3.23.2
-urllib3==1.26.16
+urllib3==1.26.15
 virtualenv==20.23.0
 whitenoise==6.4.0
+yarl==1.9.2
