--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -14,6 +14,7 @@ env:
   STRIPE_ENDPOINT_SECRET: ${{secrets.STRIPE_ENDPOINT_SECRET}}
   GOOGLE_MAPS_API_KEY: ${{secrets.GOOGLE_MAPS_API_KEY}}
   MAPBOX_API_KEY: ${{secrets.MAPBOX_API_KEY}}
+  OPENAI_KEY: ${{secrets.OPENAI_KEY}}
 
 jobs:
   test:
