--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: 22.10.0
     hooks:
       - id: black
+        args: [ '--line-length', '400', '--exclude', 'migrations' ]
         exclude: migrations
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
