--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-asgiref==3.7.2
+aiohttp==3.8.4
+aiosignal==1.3.1
+asgiref
 async-timeout==4.0.3
+attrs==23.1.0
 beautifulsoup4==4.12.2
 boto3
 botocore
@@ -28,8 +31,10 @@ gunicorn==21.2.0
 identify==2.5.29
 idna==3.4
 jmespath==1.0.1
+multidict==6.0.4
 nodeenv==1.8.0
 oauthlib==3.2.2
+openai==0.27.8
 Pillow==10.0.1
 pillow-heif==0.13.0
 platformdirs==3.10.0
@@ -50,6 +55,7 @@ sentry-sdk
 six==1.16.0
 soupsieve==2.5
 sqlparse==0.4.4
+tqdm==4.65.0
 stripe==6.5.0
 tldextract==3.5.0
 types-cryptography==3.3.23.2
