Updated env example

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_PRICE_ID=
 STRIPE_ENDPOINT_SECRET=
+CELERY_BROKER_URL=
+CELERY_ALWAYS_EAGER=True
