--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ async-timeout==4.0.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
 billiard==4.1.0
-boto3==1.26.7
-botocore==1.29.7
+boto3
+botocore
 celery==5.3.4
 certifi==2023.7.22
 cffi==1.15.1
