--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -45,12 +45,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
-          cache: 'pip'
+          cache: 'poetry'
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install coverage
+          pip install poetry
+          poetry install --group dev
+          poetry shell
       - name: Collect Static
         run: |
           python manage.py collectstatic --no-input
