--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,15 @@
 aiohttp==3.9.1
 aiosignal==1.3.1
 amqp==5.2.0
+annotated-types==0.6.0
+anyio==4.2.0
 asgiref==3.7.2
 async-timeout==4.0.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
 billiard==4.2.0
-boto3
-botocore
+boto3==1.33.11
+botocore==1.33.11
 celery==5.3.4
 certifi==2023.7.22
 cffi==1.16.0
@@ -21,6 +23,7 @@ crispy-tailwind==0.5.0
 cryptography==41.0.7
 defusedxml==0.7.1
 distlib==0.3.7
+distro==1.8.0
 Django==4.2.7
 django-allauth==0.58.2
 django-colorfield==0.10.1
@@ -30,12 +33,16 @@ django-environ==0.11.2
 django-redis==5.4.0
 django-ses==3.5.0
 django-storages==1.14.2
+exceptiongroup==1.2.0
 factory-boy==3.3.0
 Faker==20.1.0
 filelock==3.13.1
 frozenlist==1.4.0
 googlemaps==4.10.0
 gunicorn==21.2.0
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.25.2
 identify==2.5.31
 idna==3.6
 jmespath==1.0.1
@@ -43,7 +50,7 @@ kombu==5.3.4
 multidict==6.0.4
 nodeenv==1.8.0
 oauthlib==3.2.2
-openai==1.4.0
+openai==0.28.0
 packaging==23.2
 Pillow==10.1.0
 pillow-heif==0.14.0
@@ -52,6 +59,8 @@ pre-commit==3.6.0
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.9
 pycparser==2.21
+pydantic==2.5.2
+pydantic_core==2.14.5
 PyJWT==2.8.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
@@ -64,11 +73,12 @@ requests-oauthlib==1.3.1
 s3transfer==0.8.2
 sentry-sdk==1.38.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.5
 sqlparse==0.4.4
-tqdm==4.66.1
 stripe==7.7.0
 tldextract==5.1.1
+tqdm==4.66.1
 types-cryptography==3.3.23.2
 typing_extensions==4.9.0
 tzdata==2023.3
