--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,14 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 crispy-tailwind==0.5.0
+cron-descriptor==1.4.0
 cryptography==41.0.7
 defusedxml==0.7.1
 distlib==0.3.7
 distro==1.8.0
 Django==4.2.8
 django-allauth==0.58.2
+django-celery-beat==2.5.0
 django-colorfield==0.11.0
 django-crispy-forms==1.14.0
 django-debug-toolbar==4.2.0
@@ -33,6 +35,7 @@ django-environ==0.11.2
 django-redis==5.4.0
 django-ses==3.5.0
 django-storages==1.14.2
+django-timezone-field==6.1.0
 exceptiongroup==1.2.0
 factory-boy==3.3.0
 Faker==20.1.0
@@ -62,6 +65,7 @@ pycparser==2.21
 pydantic==2.5.2
 pydantic_core==2.14.5
 PyJWT==2.8.0
+python-crontab==3.0.0
 python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2023.3.post1
