--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,8 @@ async-timeout==4.0.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
 billiard==4.2.0
-boto3==1.33.11
-botocore==1.33.11
+boto3
+botocore
 celery==5.3.6
 certifi==2023.7.22
 cffi==1.16.0
