--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
 crispy-tailwind==0.5.0
-cron-descriptor==1.4.0
 cryptography==42.0.2
 defusedxml==0.7.1
 distlib==0.3.7
@@ -53,9 +52,9 @@ kombu==5.3.4
 multidict==6.0.5
 nodeenv==1.8.0
 oauthlib==3.2.2
-openai==0.28.0
+openai==1.12.0
 packaging==23.2
-Pillow==10.2.0
+pillow==10.2.0
 pillow-heif==0.14.0
 platformdirs==4.2.0
 pre-commit==3.6.0
@@ -76,6 +75,7 @@ requests-file==1.5.1
 requests-oauthlib==1.3.1
 s3transfer==0.8.2
 sentry-sdk==1.39.1
+setuptools==69.0.3
 six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
