--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -75,7 +75,7 @@ jobs:
       - name: Lint with pre-commit
         run: |
           pre-commit run -a
-  deploy:
+  deploy-render:
     runs-on: ubuntu-latest
     needs: [test, lint]
     if: github.ref == 'refs/heads/main'
@@ -88,20 +88,18 @@ jobs:
         uses: joelwmale/webhook-action@master
         with:
           url: ${{ secrets.RENDER_CELERY_DEPLOY_HOOK }}
-      - uses: a7ul/tar-action@v1.1.0
-        with:
-          command: c
-          cwd: "./"
-          files: |
-            /
-          outPath: deploy.tar
-      - name: Deploy web app to CapRover
+  deploy-caprover:
+    runs-on: ubuntu-latest
+    needs: [test, lint]
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - name: Deploy web app
         uses: caprover/deploy-from-github@v1.0.1
         with:
           server: '${{ secrets.CAPROVER_SERVER }}'
           app: '${{ secrets.CAPROVER_WEB_APP_NAME }}'
           token: '${{ secrets.CAPROVER_WEB_APP_TOKEN }}'
-      - name: Deploy celery app to CapRover
+      - name: Deploy celery app
         uses: caprover/deploy-from-github@v1.0.1
         with:
           server: '${{ secrets.CAPROVER_SERVER }}'
