--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -93,12 +93,10 @@ jobs:
     needs: [test, lint]
     if: github.ref == 'refs/heads/main'
     steps:
-      - name: Deploy web app
-        uses: caprover/deploy-from-github@v1.0.1
-        with:
-          server: '${{ secrets.CAPROVER_SERVER }}'
-          app: '${{ secrets.CAPROVER_WEB_APP_NAME }}'
-          token: '${{ secrets.CAPROVER_WEB_APP_TOKEN }}'
+      - name: Install Caprover
+        run: npm install -g caprover
+      - name: Deploy web app CLI
+        run: caprover deploy -h '${{ secrets.CAPROVER_SERVER }}' -a '${{ secrets.CAPROVER_WEB_APP_NAME }}' -b 'main' --appToken '${{ secrets.CAPROVER_WEB_APP_TOKEN }}'
       - name: Deploy celery app
         uses: caprover/deploy-from-github@v1.0.1
         with:
