--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -62,22 +62,9 @@ jobs:
           coverage run --source='.' manage.py test --no-input
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.9
-      - name: Install pre-commit
-        run: pip install pre-commit
-      - name: Lint with pre-commit
-        run: |
-          pre-commit run -a
   deploy-caprover:
     runs-on: ubuntu-latest
-    needs: [test, lint]
+    needs: [test]
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
